--- a/tjtt_address_input/tjtt_address_input.html
+++ b/tjtt_address_input/tjtt_address_input.html
@@ -8,20 +8,21 @@
 <body>
     <table>
         <tr>
-            <td></td>
-            <td></td>
+            <td>1</td>
+            <span>1</span>
+            <td>2</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>2</td>
+            <td>2</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>3</td>
+            <td>3</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>4</td>
+            <td>4</td>
         </tr>
     </table>
     
