add css style,partially events

--- a/tjtt_address_input/tjtt_address_input.html
+++ b/tjtt_address_input/tjtt_address_input.html
@@ -4,27 +4,31 @@
     <meta name="viewport" content="width=375,height=667, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script type="text/javascript" src="lib/lib.js"></script>
 </head>
-<body>
-    <table>
-        <tr>
-            <td>1</td>
-            <span>1</span>
-            <td>2</td>
+<body onload="onload()">
+    <div class="container">
+    <form method="post">
+    <table border="1">
+        <tr >
+            <td class="label">收货人</td>
+            <td><input type="text" class="textField" placeholder="建议填写真实姓名"> </td>
         </tr>
         <tr>
-            <td>2</td>
-            <td>2</td>
+            <td class="label">手机号</td>
+            <td><input type="text" class="textField" placeholder="请输入手机号"> </td>
         </tr>
         <tr>
-            <td>3</td>
-            <td>3</td>
+            <td class="label">收货地址</td>
+            <td><input type="text" class="textField" placeholder="请输入详细地址"> </td>
         </tr>
-        <tr>
-            <td>4</td>
-            <td>4</td>
+        <tr class="confirmTr" align="center">
+            <td colspan="2"><input type="button" value="确认提交兑换" class="button" id="confirmBtn"></td>
+
         </tr>
     </table>
-    
+    </form>
+    </div>
 </body>
 </html>
